--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
 	--icon-color-gray: #AFB1B8;
 	--icon-bg-active: #2196f3;
 	--icon-color-white: #ffffff;
+	--main-trans-func: cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 ul {
@@ -115,6 +116,7 @@ section {
 .header-nav-link:hover,
 .header-nav-link:focus {
 	color: var(--color-link-blue);
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header-nav-link-curent {
@@ -143,6 +145,7 @@ section {
 .contact-link:hover,
 .contact-link:focus {
 	color: var(--color-link-blue);
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-icon {
@@ -209,6 +212,7 @@ section {
 .button:hover,
 .button:focus {
 	background-color: var(--butn-backgrnd-color);
+	transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1), color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:active {
@@ -349,6 +353,7 @@ section {
 .team-soc-link:hover,
 .team-soc-link:focus {
 	background-color: var(--icon-bg-active);
+	transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1), color 2550ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-soc-link:hover .team-soc-icon {
@@ -589,6 +594,7 @@ footer .container {
 .portfolio-links:hover,
 .portfolio-links:focus {
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+
 }
 
 
@@ -610,4 +616,57 @@ footer .container {
 	font-size: 16px;
 	line-height: 1.875;
 	color: var(--color-letter-gray);
+}
+
+.backdrop {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.1);
+	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal {
+	position: absolute;
+	width: 528px;
+	min-height: 581px;
+	background-color: var(--color-white);
+	border-radius: 4px;
+	box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+	top: 50%;
+	left: 50%;
+	opacity: 1;
+	transform: translate(-50%, -50%) scale(1);
+	transition: transform 300ms linear;
+}
+
+.backdrop.is-hidden .modal {
+	transform: translate(-50%, -50%) scale(0.4);
+}
+
+.modal-close {
+	position: absolute;
+	top: 8px;
+	right: 8px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 30px;
+	height: 30px;
+	padding: 0;
+  	background-color: var(--color-white);
+	border: 1px solid rgba(0, 0, 0, 0.1);
+	border-radius: 50%;
+	cursor: pointer;
+}
+
+.icon-close-btn {
+	fill: var(--color-black);
+}
+
+.is-hidden {
+	opacity: 0;
+	visibility: hidden;
+	pointer-events: none;
 }
