--- a/css/styles.css
+++ b/css/styles.css
@@ -11,7 +11,8 @@
 	--icon-color-gray: #AFB1B8;
 	--icon-bg-active: #2196f3;
 	--icon-color-white: #ffffff;
-	--main-trans-func: cubic-bezier(0.4, 0, 0.2, 1)
+	--main-trans-func: cubic-bezier(0.4, 0, 0.2, 1);
+	--time-trans: 2050ms;
 }
 
 ul {
@@ -77,12 +78,17 @@ section {
 .logo-header-link {
 	text-decoration: none;
 	margin-right: 93px;
-	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	font-family: "Raleway";
 	font-weight: 700;
 	font-size: 26px;
 	line-height: 1.1923;
 	color: var(--color-black);
+	transition: text-shadow 250ms var(--main-trans-func);
+}
+
+.logo-header-link:hover,
+.logo-header-link:focus {
+	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .logo-web {
@@ -107,21 +113,35 @@ section {
 	display: flex;
 	gap: 50px;
 }
+
+.header-nav-link-curent {
+	position: relative;
+	color: var(--color-link-blue);
+	text-decoration: none;
+}
+
 .header-nav-link {
 	color: var(--color-text-black);
 	text-decoration: none;
 	display: inline-block;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-nav-link-curent::after {
+	position: absolute;
+	bottom: 0;
+	transition: 250ms var(--main-trans-func);
+	display: block;
+	content: "";
+	width: 100%;
+	height: 4px;
+	border-radius: 2px;
+	background-color: var(--color-link-blue);
 }
 
 .header-nav-link:hover,
 .header-nav-link:focus {
 	color: var(--color-link-blue);
-	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-nav-link-curent {
-	color: var(--color-link-blue);
-	text-decoration: none;
 }
 
 .header-contact {
@@ -140,12 +160,12 @@ section {
 	letter-spacing: 0.02em;
 	color: var(--color-letter-gray);
 	text-decoration: none;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-link:hover,
 .contact-link:focus {
 	color: var(--color-link-blue);
-	transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-icon {
@@ -207,12 +227,14 @@ section {
 	border: none;
 	cursor: pointer;
 	margin: 0 auto;
+	transition:
+	    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:hover,
 .button:focus {
 	background-color: var(--butn-backgrnd-color);
-	transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1), color 2500ms cubic-bezier(0.4, 0, 0.2, 1);
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .button:active {
@@ -227,7 +249,6 @@ section {
 	list-style: none;
 	display: flex;
 	gap: 30px;
-	
 }
 
 .features-icon {
@@ -343,7 +364,10 @@ section {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	border-radius: 50%;
+	border-radius: 25%;
+	transition: 
+		background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+		border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .team-soc-icon {
@@ -353,7 +377,7 @@ section {
 .team-soc-link:hover,
 .team-soc-link:focus {
 	background-color: var(--icon-bg-active);
-	transition: opacity 2500ms cubic-bezier(0.4, 0, 0.2, 1), color 2550ms cubic-bezier(0.4, 0, 0.2, 1);
+	border-radius: 50%;
 }
 
 .team-soc-link:hover .team-soc-icon {
@@ -381,6 +405,9 @@ section {
 	border: 1px solid var(--icon-color-gray);
 	border-radius: 4px;
 	fill: var(--icon-color-gray);
+	transition: 
+		fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
+		border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .clients-link:hover,
@@ -410,6 +437,12 @@ footer .container {
 	font-size: 26px;
 	line-height: 1.1923;
 	color: var(--color-white);
+	transition: text-shadow 250ms var(--main-trans-func);
+}
+
+.logo-footer-link:hover,
+.logo-footer-link:focus {
+	text-shadow: 0px 4px 4px rgb(0, 0, 0);
 }
 
 .footer address {
@@ -432,6 +465,7 @@ footer .container {
 	line-height: 1.7142;
 	color: var(--color-white);
 	text-decoration: none;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-map-link:hover,
@@ -447,6 +481,7 @@ footer .container {
 	line-height: 1.7142;
 	color: rgba(255, 255, 255, 0.6);
 	text-decoration: none;
+	transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-contact-link:hover,
@@ -489,6 +524,9 @@ footer .container {
 	justify-content: center;
 	border-radius: 50%;
 	background: rgba(255, 255, 255, 0.1);
+	transition: 
+		background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+		border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .social-icon {
@@ -539,6 +577,10 @@ footer .container {
 	border: none;
 	cursor: pointer;
 	padding: 6px 22px;
+	transition: 
+		background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+		color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+		box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-button:active {
@@ -590,13 +632,12 @@ footer .container {
 .portfolio-links {
 	text-decoration: none;
 	display: block;
+	transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-links:hover,
 .portfolio-links:focus {
 	box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-
 }
-
 
 .portfolio-card {
 	background-color: var(--color-white);
