--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,7 @@ section {
 }
 
 .header-nav-link {
+	position: relative;
 	color: var(--color-text-black);
 	text-decoration: none;
 	display: inline-block;
@@ -142,6 +143,12 @@ section {
 .header-nav-link:hover,
 .header-nav-link:focus {
 	color: var(--color-link-blue);
+}
+
+.header-nav-link:hover::after,
+.header-nav-link:focus::after {
+	opacity: 1;
+	transform: translateY(0%);
 }
 
 .header-contact {
