--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,6 @@
 	--icon-bg-active: #2196f3;
 	--icon-color-white: #ffffff;
 	--main-trans-func: cubic-bezier(0.4, 0, 0.2, 1);
-	--time-trans: 2050ms;
 }
 
 ul {
@@ -135,6 +134,7 @@ section {
 	display: block;
 	content: "";
 	width: 100%;
+	transform: scaleX(1.1);
 	height: 4px;
 	border-radius: 2px;
 	background-color: var(--color-link-blue);
@@ -303,6 +303,24 @@ section {
 
 .about-picture-title {
 	flex-basis: calc((100% - 90px) / 4);
+	position: relative;
+}
+
+.about-picture-text {
+	position: absolute;
+    height: 70px;
+    width: 100%;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient( rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8) );
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: 700;
+    line-height: 1.14;
+    text-align: center;
+    text-transform: uppercase;
+    color: var(--color-white);
 }
 
 .team-section {
@@ -365,29 +383,26 @@ section {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	border-radius: 25%;
+	border-radius: 50%;
+	color: var(--icon-color-gray);
 	transition: 
 		background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-		border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+		color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .team-soc-icon {
-	fill: var(--icon-color-gray)
+	fill: currentColor;
 }
 
 .team-soc-link:hover,
 .team-soc-link:focus {
 	background-color: var(--icon-bg-active);
 	border-radius: 50%;
+	color: var(--icon-color-white);
 }
 
-.team-soc-link:hover .team-soc-icon {
-	fill: var(--icon-color-white);
-}
 
-.team-soc-link:focus .team-soc-icon {
-	fill: var(--icon-color-white);
-}
+
 /* ____________________Client section__________________ */
 
 .clients-list {
@@ -701,10 +716,18 @@ footer .container {
 	border: 1px solid rgba(0, 0, 0, 0.1);
 	border-radius: 50%;
 	cursor: pointer;
+	transition: 
+		color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+		border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-close-btn {
-	fill: var(--color-black);
+	fill: inherit;
+}
+
+.modal-close:hover, .modal-close:focus {
+	fill: var(--icon-bg-active);
+	border-color: var(--color-link-blue);
 }
 
 .is-hidden {
